Removed obsolete paragraph about -XX:MaxPermSize from the readme file